default-backend/other/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__
  labels:
    app: __APP_NAME__
    service: __APP_NAME__
spec:
  type: NodePort
  ports:
    - port: 80
    - targetPort: 8080
      name: http
  selector:
    app: __APP_NAME__
