default-backend/other/DestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: __APP_NAME__
spec:
  hosts: __APP_NAME__
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
